--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,28 @@
+.App{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+button{
+    margin:10px;
+    padding:10px 20px;
+    font-size:18px;
+}
+
+.tube-area{
+    display:flex;
+    flex-wrap: wrap;
+    max-width:500px;
+    margin:0 auto;
+    justify-content: center;
+}
+
 .tube{
     border : solid #999;
     border-radius: 5px;
     border-width: 0px 2px 2px 2px;
     padding:10px;
-    margin:50px 30px 10px;
+    margin:20px 20px 10px;
 }
 
 .ball{
@@ -17,6 +36,6 @@
     width:0px;
     margin:0 auto;
     border-right: 10px solid transparent;
-    border-bottom: 10px solid red;
+    border-bottom: 10px solid;
     border-left: 10px solid transparent;  
 }
